--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "body-parser": "^1.19.0",
     "discord.js": "^12.2.0",
     "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "@architect/sandbox": "^1.12.7"
   }
 }
